# mmdbridge

./: .gitignore  CMakeLists.txt  LICENSE.txt  ProjectHome.md  README.md  cmake_vs2015_64.bat  cmake_vs2015_64_alembic-1.7.1.bat  cmake_vs2017_64.bat  cmake_vs2017_64_alembic-1.7.1.bat  cmake_vs2022_64.bat  hook.sln  how_to_build.md  readme.txt  rough.md
.github/workflows/: build_vs2022_64.yml
Release/: mmdbridge_alembic.py  mmdbridge_alembic_for_houdini.py  mmdbridge_alembic_for_maya.py
Release/Win32/: bone_test.py  mmdbridge_alembic_for_3dsmax.py  mmdbridge_alembic_for_UE4.py  mmdbridge_alembic_for_blender.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_guerillarender.py  mmdbridge_alembic_for_houdini.py  mmdbridge_alembic_for_maya.py  mmdbridge_alembic_for_maya2014.py  mmdbridge_alembic_for_maya2015.py  mmdbridge_alembic_for_preview.py  mmdbridge_alembic_for_renderman.py  mmdbridge_avi.py  mmdbridge_obj_general.py  mmdbridge_octane.py  mmdbridge_pmx.py  mmdbridge_tungsten.py  mmdbridge_vmd.py
Release/Win32/alembic_assign_scripts/: 3dsmax2017.py  c4d.py  houidini.txt  maya2015.py  ue4.py
Release/alembic_assign_scripts/: guerilla_render.lua  houidini.txt  maya.py
Release/x64/: _light_test.py  mmdbridge_alembic_for_3dsmax.py  mmdbridge_alembic_for_UE4.py  mmdbridge_alembic_for_blender.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_guerillarender.py  mmdbridge_alembic_for_houdini.py  mmdbridge_alembic_for_maya.py  mmdbridge_obj_general.py  mmdbridge_obj_metaseq.py  mmdbridge_octane.py  mmdbridge_octane_ocs.py  mmdbridge_tungsten.py  mmdbridge_vidro.py
Release/x64/alembic_assign_scripts/: 3dsmax2017.py  blender278.py  c4d.py  guerilla_render.lua  houidini.txt  maya2014.py  maya2015.py  ue4.py  ue5-my.py  ue5.py
branches/20140510/Release/: mmdbridge_vidro.py
branches/20140510/Release/Win32/: mmdbridge_alembic_for_houdini.py  mmdbridge_alembic_for_preview.py
branches/20140510/d3dx9/: d3dx9.vcxproj
branches/20140510/libs/python/include/: Python-ast.h  ceval.h  code.h  codecs.h  graminit.h  listobject.h  modsupport.h  opcode.h  pyconfig.h  pydebug.h  pymath.h  pyport.h  pystate.h  pythonrun.h  pytime.h  symtable.h
branches/20140510/project/d3d9/: d3d9.vcxproj  d3d9.vcxproj.filters
branches/20140510/project/d3dx9/: d3dx9.vcxproj
branches/20140510/project/umbase/: umbase.vcxproj  umbase.vcxproj.filters
branches/20140510/src/d3d9/: alembic.cpp  bridge_parameter.cpp  d3d9.cpp  d3d9.h  hook.def
branches/20140510/src/d3dx9_32/: d3dx9.h  hook.def
branches/20140510/src/umbase/: UMAny.h  UMEvent.h  UMMath.h  UMMathTypes.h  UMPath.cpp  UMPath.h  UMStringUtil.h  UMTime.cpp  UMVector.h
d3d9/: d3d9.vcxproj  d3d9.vcxproj.filters
d3dx9/: d3dx9.vcxproj.filters
libs/MikuMikuFormats/Win32/Release/: MikuMikuFormats.lib
libs/MikuMikuFormats/include/: EncodingHelper.h  Pmd.h  Pmx.h  Vmd.h
libs/MikuMikuFormats/x64/Release/: MikuMikuFormats.lib
libs/python/Win32/Release/: python3.lib  python34.lib
libs/python/include/: abstract.h  bytesobject.h  compile.h  dictobject.h  fileobject.h  fileutils.h  frameobject.h  genobject.h  grammar.h  memoryobject.h  methodobject.h  node.h  object.h  objimpl.h  osdefs.h  patchlevel.h  pyatomic.h  pyerrors.h  pymacro.h  pymem.h  pythonnt_rc.h  setobject.h  sliceobject.h  token.h  traceback.h  typeslots.h  unicodeobject.h
libs/python/x64/Release/: python3.lib  python34.lib
project/d3d9/: d3d9.vcproj  d3d9.vcxproj  d3d9.vcxproj.filters
project/d3dx9/: d3dx9.vcxproj  d3dx9.vcxproj.filters
src/: CMakeLists.txt
src/MikuMikuFormats/: CMakeLists.txt  EncodingHelper.h  Pmd.h  Pmx.cpp  Pmx.h  README.md  README_Ja.md  Vmd.h
src/d3d9/: CMakeLists.txt  alembic.cpp  alembic.h  avi.cpp  avi.h  bridge_parameter.cpp  bridge_parameter.h  d3d9.cpp  d3d9.h  d3d9.rc  d3d9.res  dllmain.cpp  hook.def  pmx.cpp  pmx.h  render_data.h  rendered_data.h  resource.h  texture_info.h  texture_parameter.h  vmd.cpp  vmd.h
src/d3dx9_32/: CMakeLists.txt  d3dx9.cpp  hook64.def
src/dx12/: CMakeLists.txt  dx12.cpp  dx12.h  dx12_hook.cpp  dx12_hook.h
src/dx12/shader/: CMakeLists.txt  rasterize.hlsl
src/umbase/: CMakeLists.txt  UMBox.cpp  UMBox.h  UMEvent.cpp  UMEvent.h  UMListenerConnector.h  UMMacro.h  UMMath.h  UMMatrix.h  UMPath.cpp  UMPath.h  UMStringUtil.h  UMTime.cpp  UMTime.h  UMVector.h
trunk/: LICENSE.txt  hook.def  hook.sln  readme.txt
trunk/Release/: hello_alembic.py  mmdbridge_alembic.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_maya.py  mmdbridge_alembic_for_preview.py  mmdbridge_rib.py
trunk/Release/Win32/: mmdbridge_octane.py  mmdbridge_octane_ocs.py
trunk/Release/alembic_assign_scripts/: c4d.txt  guerilla_render.lua  maya.txt
trunk/Release/x64/: mmdbridge_alembic_for_preview.py  pyqttest.py
trunk/d3d9/: d3d9.res
trunk/d3dx9/: d3dx9.vcproj
trunk/libs/python/Win32/Release/: python3.lib
trunk/libs/python/include/: Python.h  bytes_methods.h  complexobject.h  dynamic_annotations.h  longobject.h  moduleobject.h  sysmodule.h  ucnhash.h
trunk/project/d3d9/: d3d9.res
trunk/project/d3dx9/: d3dx9.vcxproj
trunk/project/umbase/: umbase.vcxproj
trunk/src/d3d9/: bridge_parameter.h  d3d9.cpp  d3d9.h  d3d9.rc  d3d9.res  hook.def
trunk/src/umbase/: UMEventType.h  UMListener.h
wiki/: rough.wiki
